Completed  - Essential Services and Asset changes