@@ -122,7 +122,7 @@ public class AssetManagementMastersPage extends BasePage {
             By.xpath("//div[contains(@class,'k-multiselect')]");
 
     private static final By MASTER_ASSET_FAULT_CATEGORY_VALUES =
-            By.xpath("//ul[@role='listbox']//li");;
+            By.xpath("//ul[@role='listbox']//li");
 
 
     public static final By MASTER_ASSET_SUBCATEGORY_CLICK_APPLICABLE_FAULT_CATEGORY_SAVE_BUTTON= By.id("ctl00_ContentPlaceHolder1_RadWinApplicableFaultCategory_C_btnSaveApplicableFaultCategory");
@@ -263,7 +263,7 @@ public class AssetManagementMastersPage extends BasePage {
             Thread.sleep(5000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
-        }        ;
+        }
         System.out.println("Verified Updated Asset Class Successfully");
     }
 
@@ -275,7 +275,7 @@ public class AssetManagementMastersPage extends BasePage {
             Thread.sleep(10000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
-        };
+        }
         System.out.println("Asset Class Deleted Successfully");
 
     }
@@ -344,7 +344,7 @@ public void MasterAssetclickAddAssetMasterCategory() {
             Thread.sleep(5000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
-        }       ;
+        }
         System.out.println("Verified Updated Asset Master Category Successfully");
     }
 
@@ -356,7 +356,7 @@ public void MasterAssetclickAddAssetMasterCategory() {
             Thread.sleep(10000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
-        }  ;
+        }
         System.out.println("Asset Master Category Deleted Successfully");
     }
 
@@ -421,7 +421,7 @@ public void MasterAssetclickAddAssetMasterCategory() {
             Thread.sleep(5000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
-        }        ;
+        }
         System.out.println("Updated Asset Category is Verified Successfully");
     }
 
@@ -433,7 +433,7 @@ public void MasterAssetclickAddAssetMasterCategory() {
             Thread.sleep(10000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
-        }        ;
+        }
         System.out.println("Asset Category Deleted Successfully");
     }
 
@@ -516,7 +516,7 @@ public void MasterAssetclickAddAssetMasterCategory() {
             Thread.sleep(5000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
-        }        ;
+        }
         System.out.println("Updated Asset Sub Category is Verified Successfully");
     }
 
@@ -663,11 +663,11 @@ public void MasterAssetclickAssetubCategorytoEdit(){
         System.out.println("Checkboxes found: " + checkBoxes.size());
         System.out.println("Percentages found: " + percentageBoxes.size());
         JavascriptExecutor js = (JavascriptExecutor) driver;
-        utils.jsClick(checkBoxes.get(0));
+        utils.jsClick(checkBoxes.getFirst());
         js.executeScript("arguments[0].removeAttribute('disabled');",
-                percentageBoxes.get(0));
-        percentageBoxes.get(0).clear();
-        percentageBoxes.get(0).sendKeys("2");
+                percentageBoxes.getFirst());
+        percentageBoxes.getFirst().clear();
+        percentageBoxes.getFirst().sendKeys("2");
         utils.waitForSeconds(1);
 
         utils.jsClick(checkBoxes.get(1));
@@ -917,7 +917,7 @@ public void MasterAssetClickOnAddbuttoninSubCategoryTriggerSection() {
         List<WebElement> allOptions =
                 wait.until(ExpectedConditions.visibilityOfAllElementsLocatedBy(options));
         System.out.println("Trigger Reason count: " + allOptions.size());
-        if (allOptions.size() == 0) {
+        if (allOptions.isEmpty()) {
             throw new RuntimeException("No Trigger Reason values found");
         }
         // Random selection
@@ -1345,7 +1345,7 @@ public void MasterAssetClickOnAddbuttoninSubCategoryTriggerSection() {
             Thread.sleep(10000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
-        };
+        }
     }
 
     // OEM
@@ -1389,7 +1389,7 @@ public void MasterAssetClickOnAddbuttoninSubCategoryTriggerSection() {
             Thread.sleep(5000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt(); // best practice
-        };
+        }
         System.out.println("Updated OEM is Verified Successfully");
     }
 
@@ -1401,7 +1401,7 @@ public void MasterAssetClickOnAddbuttoninSubCategoryTriggerSection() {
             Thread.sleep(10000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
-        } ;
+        }
         System.out.println("OEM is Deleted Successfully");
     }
 
@@ -1462,7 +1462,7 @@ public void MasterAssetClickOnAddbuttoninSubCategoryTriggerSection() {
             Thread.sleep(5000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
-        }    ;
+        }
     }
 
     public void MasterAssetclickMakeToDelete() {
@@ -1473,7 +1473,7 @@ public void MasterAssetClickOnAddbuttoninSubCategoryTriggerSection() {
             Thread.sleep(10000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
-        } ;
+        }
         System.out.println("Make is Deleted Successfully");
     }
 
@@ -1521,7 +1521,7 @@ public void MasterAssetClickOnAddbuttoninSubCategoryTriggerSection() {
         utils.waitForSeconds(5);
     }
 
-    public void MasterAssetModelselectAssetCategory(String value)
+    public void MasterAssetModelselectAssetCategory()
          throws InterruptedException {
             Thread.sleep(5000);
             By categoryDropdown = By.id("ctl00_ContentPlaceHolder1_RadWinModel_C_radDrpCategory_Input");
@@ -1542,7 +1542,7 @@ public void MasterAssetClickOnAddbuttoninSubCategoryTriggerSection() {
             }
     }
 
-    public void MasterAssetModelselectAssetSubCategory(String value)
+    public void MasterAssetModelselectAssetSubCategory()
             throws InterruptedException {
         Thread.sleep(5000);
         By subcategoryDropdown = By.id("ctl00_ContentPlaceHolder1_RadWinModel_C_radDrpSubCate_Input");
@@ -1598,7 +1598,7 @@ public void MasterAssetClickOnAddbuttoninSubCategoryTriggerSection() {
             Thread.sleep(5000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt(); // best practice
-        }  ;
+        }
         System.out.println("Updated Model Verified Successfully");
     }
 
@@ -1610,7 +1610,7 @@ public void MasterAssetClickOnAddbuttoninSubCategoryTriggerSection() {
             Thread.sleep(10000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
-        }  ;
+        }
         System.out.println("Model Deleted Successfully");
     }
 
@@ -1664,7 +1664,7 @@ public void MasterAssetClickOnAddbuttoninSubCategoryTriggerSection() {
             Thread.sleep(5000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
-        }        ;
+        }
         System.out.println("Updated Derating Factor Verified Successfully");
     }
 
@@ -1676,7 +1676,7 @@ public void MasterAssetClickOnAddbuttoninSubCategoryTriggerSection() {
             Thread.sleep(10000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt(); // best practice
-        }    ;
+        }
         System.out.println("Derating Factor Deleted Successfully");
     }
 
@@ -1746,7 +1746,7 @@ public void MasterAssetenterShortCodeReadingUnit(String Short_Code) {
             Thread.sleep(5000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt(); // best practice
-        }  ;
+        }
         System.out.println("Updated Reading Unit Verified Successfully");
     }
 
@@ -1758,7 +1758,7 @@ public void MasterAssetenterShortCodeReadingUnit(String Short_Code) {
             Thread.sleep(10000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt(); // best practice
-        }  ;
+        }
         System.out.println("Reading Unit Deleted Successfully");
 
     }
@@ -1885,7 +1885,7 @@ public void MasterAssetenterShortCodeReadingUnit(String Short_Code) {
             Thread.sleep(5000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt(); // best practice
-        }  ;
+        }
         System.out.println("Updated Technical_Parameter Verified Successfully");
     }
 
@@ -1897,7 +1897,7 @@ public void MasterAssetenterShortCodeReadingUnit(String Short_Code) {
             Thread.sleep(10000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt(); // best practice
-        }  ;
+        }
         System.out.println("Technical Parameter Deleted Successfully");
     }
 
@@ -1959,7 +1959,7 @@ public void MasterAssetenterShortCodeReadingUnit(String Short_Code) {
             Thread.sleep(5000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt(); // best practice
-        }  ;
+        }
         System.out.println("Metering Attributes Updated Successfully");
     }
 
@@ -1971,7 +1971,7 @@ public void MasterAssetenterShortCodeReadingUnit(String Short_Code) {
             Thread.sleep(10000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt(); // best practice
-        }  ;
+        }
         System.out.println("Metering Attributes Deleted Successfully");
     }
 
@@ -2059,7 +2059,7 @@ public void MasterAssetenterShortCodeReadingUnit(String Short_Code) {
             Thread.sleep(5000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt(); // best practice
-        }  ;
+        }
         System.out.println("Updated Metering Parameter Verified Successfully");
     }
 
@@ -2072,7 +2072,7 @@ public void MasterAssetenterShortCodeReadingUnit(String Short_Code) {
             Thread.sleep(10000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt(); // best practice
-        }  ;
+        }
         System.out.println("Metering Parameter Deleted Successfully");
     }
 
@@ -2139,7 +2139,7 @@ public void MasterAssetenterShortCodeReadingUnit(String Short_Code) {
             Thread.sleep(5000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt(); // best practice
-        }  ;
+        }
         System.out.println("Verified Updated Tool Successfully");
     }
 
@@ -2151,7 +2151,7 @@ public void MasterAssetenterShortCodeReadingUnit(String Short_Code) {
             Thread.sleep(10000);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt(); // best practice
-        }  ;
+        }
         System.out.println("Tool Deleted Successfully");
     }
 
